--- a/build-HustleFlow-Desktop_Qt_6_0_3_clang_64bit-Debug/Makefile
+++ b/build-HustleFlow-Desktop_Qt_6_0_3_clang_64bit-Debug/Makefile
@@ -14,10 +14,10 @@ EQ            = =
 
 CC            = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang
 CXX           = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++
-DEFINES       = -DQT_QML_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB
+DEFINES       = -DQT_QML_DEBUG -DQT_NETWORK_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB
 CFLAGS        = -pipe -g $(EXPORT_ARCH_ARGS) -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk -mmacosx-version-min=10.14 -Wall -Wextra -fPIC $(DEFINES)
 CXXFLAGS      = -pipe -stdlib=libc++ -g -std=gnu++1z $(EXPORT_ARCH_ARGS) -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk -mmacosx-version-min=10.14 -Wall -Wextra -fPIC $(DEFINES)
-INCPATH       = -I../HustleFlow -I. -I../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers -I../../../Qt/6.0.3/clang_64/lib/QtGui.framework/Headers -I../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/AGL.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/AGL.framework/Headers -I../../../Qt/6.0.3/clang_64/mkspecs/macx-clang -F/Users/markkypanc/Qt/6.0.3/clang_64/lib
+INCPATH       = -I../HustleFlow -I. -I../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers -I../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers -I../../../Qt/6.0.3/clang_64/lib/QtGui.framework/Headers -I../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/AGL.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/System/Library/Frameworks/AGL.framework/Headers -I../../../Qt/6.0.3/clang_64/mkspecs/macx-clang -F/Users/markkypanc/Qt/6.0.3/clang_64/lib
 QMAKE         = /Users/markkypanc/Qt/6.0.3/clang_64/bin/qmake
 DEL_FILE      = rm -f
 CHK_DIR_EXISTS= test -d
@@ -40,7 +40,7 @@ DISTNAME      = HustleFlow1.0.0
 DISTDIR = /Users/markkypanc/Desktop/HustleFlow/build-HustleFlow-Desktop_Qt_6_0_3_clang_64bit-Debug/.tmp/HustleFlow1.0.0
 LINK          = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++
 LFLAGS        = -stdlib=libc++ -headerpad_max_install_names $(EXPORT_ARCH_ARGS) -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk -mmacosx-version-min=10.14 -Wl,-rpath,@executable_path/../Frameworks -Wl,-rpath,/Users/markkypanc/Qt/6.0.3/clang_64/lib
-LIBS          = $(SUBLIBS) -F/Users/markkypanc/Qt/6.0.3/clang_64/lib -framework QtWidgets -framework QtGui -framework AppKit -framework ImageIO -framework Metal -framework QtCore -framework DiskArbitration -framework IOKit -framework AGL -framework OpenGL   
+LIBS          = $(SUBLIBS) -F/Users/markkypanc/Qt/6.0.3/clang_64/lib -framework QtNetwork -framework QtWidgets -framework QtGui -framework AppKit -framework ImageIO -framework Metal -framework QtCore -framework DiskArbitration -framework IOKit -framework AGL -framework OpenGL   
 AR            = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ar cq
 RANLIB        = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ranlib -s
 SED           = sed
@@ -52,9 +52,17 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = ../HustleFlow/main.cpp \
+SOURCES       = ../HustleFlow/Model/model.cpp \
+		../HustleFlow/View/view.cpp \
+		../HustleFlow/ViewModel/networkmanager.cpp \
+		../HustleFlow/ViewModel/viewmodel.cpp \
+		../HustleFlow/main.cpp \
 		../HustleFlow/contentview.cpp moc_contentview.cpp
-OBJECTS       = main.o \
+OBJECTS       = model.o \
+		view.o \
+		networkmanager.o \
+		viewmodel.o \
+		main.o \
 		contentview.o \
 		moc_contentview.o
 DIST          = ../../../Qt/6.0.3/clang_64/mkspecs/features/spec_pre.prf \
@@ -142,6 +150,7 @@ DIST          = ../../../Qt/6.0.3/clang_64/mkspecs/features/spec_pre.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/qt_config.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/macx-clang/qmake.conf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/spec_post.prf \
+		../HustleFlow/.qmake.stash \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/exclusive_builds.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/mac/sdk.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/toolchain.prf \
@@ -170,7 +179,17 @@ DIST          = ../../../Qt/6.0.3/clang_64/mkspecs/features/spec_pre.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/exceptions.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/yacc.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/lex.prf \
-		../HustleFlow/HustleFlow.pro ../HustleFlow/contentview.h ../HustleFlow/main.cpp \
+		../HustleFlow/HustleFlow.pro ../HustleFlow/Model/model.h \
+		../HustleFlow/View/view.h \
+		../HustleFlow/ViewModel/networkmanager.h \
+		../HustleFlow/ViewModel/viewmodel.h \
+		../HustleFlow/constants.h \
+		../HustleFlow/constants.h \
+		../HustleFlow/contentview.h ../HustleFlow/Model/model.cpp \
+		../HustleFlow/View/view.cpp \
+		../HustleFlow/ViewModel/networkmanager.cpp \
+		../HustleFlow/ViewModel/viewmodel.cpp \
+		../HustleFlow/main.cpp \
 		../HustleFlow/contentview.cpp
 QMAKE_TARGET  = HustleFlow
 DESTDIR       = 
@@ -279,6 +298,7 @@ Makefile: ../HustleFlow/HustleFlow.pro ../../../Qt/6.0.3/clang_64/mkspecs/macx-c
 		../../../Qt/6.0.3/clang_64/mkspecs/features/qt_config.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/macx-clang/qmake.conf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/exclusive_builds.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/mac/sdk.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/toolchain.prf \
@@ -308,6 +328,7 @@ Makefile: ../HustleFlow/HustleFlow.pro ../../../Qt/6.0.3/clang_64/mkspecs/macx-c
 		../../../Qt/6.0.3/clang_64/mkspecs/features/yacc.prf \
 		../../../Qt/6.0.3/clang_64/mkspecs/features/lex.prf \
 		../HustleFlow/HustleFlow.pro \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Resources/QtNetwork.prl \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Resources/QtWidgets.prl \
 		../../../Qt/6.0.3/clang_64/lib/QtGui.framework/Resources/QtGui.prl \
 		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Resources/QtCore.prl
@@ -397,6 +418,7 @@ Makefile: ../HustleFlow/HustleFlow.pro ../../../Qt/6.0.3/clang_64/mkspecs/macx-c
 ../../../Qt/6.0.3/clang_64/mkspecs/features/qt_config.prf:
 ../../../Qt/6.0.3/clang_64/mkspecs/macx-clang/qmake.conf:
 ../../../Qt/6.0.3/clang_64/mkspecs/features/spec_post.prf:
+.qmake.stash:
 ../../../Qt/6.0.3/clang_64/mkspecs/features/exclusive_builds.prf:
 ../../../Qt/6.0.3/clang_64/mkspecs/features/mac/sdk.prf:
 ../../../Qt/6.0.3/clang_64/mkspecs/features/toolchain.prf:
@@ -426,6 +448,7 @@ Makefile: ../HustleFlow/HustleFlow.pro ../../../Qt/6.0.3/clang_64/mkspecs/macx-c
 ../../../Qt/6.0.3/clang_64/mkspecs/features/yacc.prf:
 ../../../Qt/6.0.3/clang_64/mkspecs/features/lex.prf:
 ../HustleFlow/HustleFlow.pro:
+../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Resources/QtNetwork.prl:
 ../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Resources/QtWidgets.prl:
 ../../../Qt/6.0.3/clang_64/lib/QtGui.framework/Resources/QtGui.prl:
 ../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Resources/QtCore.prl:
@@ -459,8 +482,8 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents ../../../Qt/6.0.3/clang_64/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../HustleFlow/contentview.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../HustleFlow/main.cpp ../HustleFlow/contentview.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../HustleFlow/Model/model.h ../HustleFlow/View/view.h ../HustleFlow/ViewModel/networkmanager.h ../HustleFlow/ViewModel/viewmodel.h ../HustleFlow/constants.h ../HustleFlow/constants.h ../HustleFlow/contentview.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../HustleFlow/Model/model.cpp ../HustleFlow/View/view.cpp ../HustleFlow/ViewModel/networkmanager.cpp ../HustleFlow/ViewModel/viewmodel.cpp ../HustleFlow/main.cpp ../HustleFlow/contentview.cpp $(DISTDIR)/
 	$(COPY_FILE) --parents ../HustleFlow/contentview.ui $(DISTDIR)/
 	$(COPY_FILE) --parents HustleFlow_en_US.ts $(DISTDIR)/
 
@@ -472,6 +495,7 @@ clean: compiler_clean
 
 distclean: clean 
 	-$(DEL_FILE) -r HustleFlow.app
+	-$(DEL_FILE) .qmake.stash
 	-$(DEL_FILE) Makefile
 
 
@@ -502,9 +526,11 @@ compiler_moc_header_clean:
 moc_contentview.cpp: ../HustleFlow/contentview.h \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/QMainWindow \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/qmainwindow.h \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/QNetworkAccessManager \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/qnetworkaccessmanager.h \
 		moc_predefs.h \
 		../../../Qt/6.0.3/clang_64/bin/moc
-	/Users/markkypanc/Qt/6.0.3/clang_64/bin/moc $(DEFINES) --include /Users/markkypanc/Desktop/HustleFlow/build-HustleFlow-Desktop_Qt_6_0_3_clang_64bit-Debug/moc_predefs.h -I/Users/markkypanc/Qt/6.0.3/clang_64/mkspecs/macx-clang -I/Users/markkypanc/Desktop/HustleFlow/HustleFlow -I/Users/markkypanc/Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers -I/Users/markkypanc/Qt/6.0.3/clang_64/lib/QtGui.framework/Headers -I/Users/markkypanc/Qt/6.0.3/clang_64/lib/QtCore.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1 -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/12.0.0/include -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/usr/include -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include -F/Users/markkypanc/Qt/6.0.3/clang_64/lib ../HustleFlow/contentview.h -o moc_contentview.cpp
+	/Users/markkypanc/Qt/6.0.3/clang_64/bin/moc $(DEFINES) --include /Users/markkypanc/Desktop/HustleFlow/build-HustleFlow-Desktop_Qt_6_0_3_clang_64bit-Debug/moc_predefs.h -I/Users/markkypanc/Qt/6.0.3/clang_64/mkspecs/macx-clang -I/Users/markkypanc/Desktop/HustleFlow/HustleFlow -I/Users/markkypanc/Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers -I/Users/markkypanc/Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers -I/Users/markkypanc/Qt/6.0.3/clang_64/lib/QtGui.framework/Headers -I/Users/markkypanc/Qt/6.0.3/clang_64/lib/QtCore.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1 -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/lib/clang/12.0.0/include -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX11.1.sdk/usr/include -I/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include -F/Users/markkypanc/Qt/6.0.3/clang_64/lib ../HustleFlow/contentview.h -o moc_contentview.cpp
 
 compiler_moc_objc_header_make_all:
 compiler_moc_objc_header_clean:
@@ -529,17 +555,52 @@ compiler_clean: compiler_moc_predefs_clean compiler_moc_header_clean compiler_ui
 
 ####### Compile
 
+model.o: ../HustleFlow/Model/model.cpp ../HustleFlow/Model/model.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o model.o ../HustleFlow/Model/model.cpp
+
+view.o: ../HustleFlow/View/view.cpp ../HustleFlow/View/view.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o view.o ../HustleFlow/View/view.cpp
+
+networkmanager.o: ../HustleFlow/ViewModel/networkmanager.cpp ../HustleFlow/ViewModel/networkmanager.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o networkmanager.o ../HustleFlow/ViewModel/networkmanager.cpp
+
+viewmodel.o: ../HustleFlow/ViewModel/viewmodel.cpp ../HustleFlow/ViewModel/viewmodel.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o viewmodel.o ../HustleFlow/ViewModel/viewmodel.cpp
+
 main.o: ../HustleFlow/main.cpp ../HustleFlow/contentview.h \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/QMainWindow \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/qmainwindow.h \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/QNetworkAccessManager \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/qnetworkaccessmanager.h \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/QApplication \
-		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/qapplication.h
+		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/qapplication.h \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/QDebug \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/qdebug.h \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/QJsonDocument \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/qjsondocument.h \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/QJsonObject \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/qjsonobject.h \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/QNetworkReply \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/qnetworkreply.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o main.o ../HustleFlow/main.cpp
 
 contentview.o: ../HustleFlow/contentview.cpp ../HustleFlow/contentview.h \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/QMainWindow \
 		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/qmainwindow.h \
-		ui_contentview.h
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/QNetworkAccessManager \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/qnetworkaccessmanager.h \
+		ui_contentview.h \
+		../HustleFlow/constants.h \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/QFile \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/qfile.h \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/QJsonDocument \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/qjsondocument.h \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/QJsonObject \
+		../../../Qt/6.0.3/clang_64/lib/QtCore.framework/Headers/qjsonobject.h \
+		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/QMessageBox \
+		../../../Qt/6.0.3/clang_64/lib/QtWidgets.framework/Headers/qmessagebox.h \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/QNetworkReply \
+		../../../Qt/6.0.3/clang_64/lib/QtNetwork.framework/Headers/qnetworkreply.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o contentview.o ../HustleFlow/contentview.cpp
 
 moc_contentview.o: moc_contentview.cpp 
